--- a/css/components/modal-contents/_indicators-list.scss
+++ b/css/components/modal-contents/_indicators-list.scss
@@ -1,6 +1,11 @@
 
 .c-indicators-list {
   padding: 42px 48px 26px;
+  width: 100%;
+
+  @media #{$mq-medium} {
+    width: 90%;
+  }
 
   .list-header {
     width: 100%;
@@ -9,6 +14,35 @@
     .title {
       text-align: center;
     }
+  }
+
+  .list-content {
+    display: flex;
+    flex-flow: column;
+
+    .groups {
+    	-webkit-column-count: 3;
+    	-webkit-column-gap: 10px;
+    	-webkit-column-fill: auto;
+    	-moz-column-count: 3;
+    	-moz-column-gap: 10px;
+    	-moz-column-fill: auto;
+    	column-count: 3;
+    	column-gap: 40px;
+    	column-fill: auto;
+      transform: translateX(0);
+    }
+
+    .c-collapsible-list {
+    	// display: inline-block;
+      width: 100%;
+    	margin-bottom: 15px;
+    	-webkit-column-break-inside: avoid;
+    	-moz-column-break-inside: avoid;
+    	column-break-inside: avoid;
+      margin-bottom: 50px;
+    }
+
   }
 
   .actions-container {
