--- a/css/components/ui/_collapsible-list.scss
+++ b/css/components/ui/_collapsible-list.scss
@@ -78,6 +78,11 @@
       line-height: 16px;
       text-transform: capitalize;
       margin-bottom: 10px;
+      padding: 0 1px;
+    }
+
+    .child-conatiner {
+      width: 0;
     }
   }
 }
