--- a/css/components/ui/_modal.scss
+++ b/css/components/ui/_modal.scss
@@ -6,7 +6,7 @@
   height: 100%;
   background: rgba($color-bg-dark, .7);
   transition: all $animation-time $ease-in-sine;
-  z-index: 1030; // Just to be sure that is over all the content
+  z-index: 10032; // Just to be sure that is over all the content
   visibility: visible;
   opacity: 1;
   display: flex;
@@ -24,26 +24,38 @@
   }
 
   .modal-container {
-    transition: transform $animation-time-2 $ease-out-cubic;
-    transform: translateY(0);
-    display: flex;
     position: relative;
-    width: calc(100% - 50px);
-    max-width: 700px;
+    display: flex;
+    width: 100%;
+    height: 100%;
     background: $color-bg-dark;
     box-shadow: 0 1px 1px rgba($color-black, 0.15);
     z-index: 1;
+    transition: transform $animation-time-2 $ease-out-cubic;
+    transform: translateY(0);
+
+
+    @media #{$mq-medium} {
+      width: auto;
+      min-width: 60%;
+      max-width: calc(100% - 50px);
+      height: auto;
+    }
   }
 
   .modal-content {
     position: relative;
     width: 100%;
-    max-height: 85vh; // Be careful with iOS devices
+    height: 100%;
     min-height: 150px;
-    overflow: auto;
+    overflow-y: auto;
     -webkit-overflow-scrolling: touch;
     box-shadow: 0 7px 15px 0 rgba($color-black, 0.15);
     border: 1px solid $color-border-1;
+
+    @media #{$mq-medium} {
+      max-height: 95vh; // Be careful with iOS devices
+    }
   }
 
   .modal-close {
@@ -53,15 +65,21 @@
     outline: none;
     display: block;
     position: absolute;
-    bottom: calc(100% - 20px);
-    right: -20px;
+    top: 30px;
+    right: 15px;
     width: 40px;
     height: 40px;
     padding: 0;
     background-color: $color-bg-dark;
-    border: 1px solid $color-border-1;
-    border-radius: 100px;
-    box-shadow: 0 0 10px 0 rgba($color-black, .2);
+
+    @media #{$mq-medium} {
+      top: auto;
+      bottom: calc(100% - 20px);
+      right: -20px;
+      border: 1px solid $color-border-1;
+      border-radius: 100px;
+      box-shadow: 0 0 10px 0 rgba($color-black, .2);
+    }
 
     cursor: pointer;
     z-index: 2; /* Otherwise, it won't be reachable */
