--- a/css/index.scss
+++ b/css/index.scss
@@ -50,6 +50,7 @@
 // - ui
 @import '../node_modules/react-select/dist/react-select';
 @import '../node_modules/react-toggle-switch/dist/css/switch.min';
+@import '../node_modules/react-bootstrap-daterangepicker/css/daterangepicker';
 @import 'components/ui/accordion';
 @import 'components/ui/area-indicators';
 @import 'components/ui/button';
