--- a/css/index.scss
+++ b/css/index.scss
@@ -65,6 +65,7 @@
 @import 'components/ui/modal';
 @import 'components/ui/dashboard-item';
 @import 'components/ui/dashboard-list';
+@import 'components/ui/pickdate';
 @import 'components/ui/select';
 @import 'components/ui/select-custom';
 @import 'components/ui/select-list';
