--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -18,6 +18,8 @@
 .l-page {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
+  background: $color-bg-dark;
 
   &.-fullscreen {
     height: 100vh;
