About agencies list

--- a/css/index.scss
+++ b/css/index.scss
@@ -57,6 +57,7 @@
 @import 'components/ui/area-indicators';
 @import 'components/ui/button';
 @import 'components/ui/dropdown';
+@import 'components/ui/card-info';
 @import 'components/ui/collapsible-list';
 @import 'components/ui/compare-toolbar';
 @import 'components/ui/filters';
@@ -68,6 +69,7 @@
 @import 'components/ui/modal';
 @import 'components/ui/dashboard-item';
 @import 'components/ui/dashboard-list';
+@import 'components/ui/section';
 @import 'components/ui/select';
 @import 'components/ui/select-custom';
 @import 'components/ui/select-list';
