--- a/css/components/pages/_about.scss
+++ b/css/components/pages/_about.scss
@@ -25,4 +25,31 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+  /* Section */
+  .agencies-list {
+    position: relative;
+
+    .agencies-logo {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      margin-bottom: 20px;
+
+      img {
+        max-width: 130px;
+        max-height: 88px;
+      }
+    }
+
+    .section-text {
+      margin-bottom: 100px;
+    }
+
+    .agency-container {
+      padding: 0 10px;
+      height: 360px;
+      margin-bottom: 20px;
+    }
+  }
 }
