--- a/css/index.scss
+++ b/css/index.scss
@@ -19,6 +19,7 @@
 // Components
 // - pages
 @import 'components/pages/about';
+@import 'components/pages/agency';
 
 // - layout
 @import 'components/layout/header';
