--- a/css/components/ui/_intro.scss
+++ b/css/components/ui/_intro.scss
@@ -27,6 +27,10 @@
       background-color: $color-watermelon;
       transform: translateX(-50%);
     }
+
+    &.-medium {
+      font-size: 35px;
+    }
   }
 
   .description {
