--- a/css/components/ui/_card-image.scss
+++ b/css/components/ui/_card-image.scss
@@ -4,6 +4,9 @@
   height: 360px;
   background-color: $color-dark-grey;
   padding: 44px 20px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 
   .c-icon {
     fill: $color-text-1;
