--- a/css/settings.scss
+++ b/css/settings.scss
@@ -17,6 +17,7 @@ $color-dark-green: #73A575;
 $color-light-green: #C9FF8A;
 $color-watermelon: #FF6161; // Red
 $color-peach: #FFA26E; // Orange
+$color-cream: #F3F9F4;
 $color-white: white;
 
 // App
@@ -46,6 +47,7 @@ $color-border-3: $color-light-grey;
 
 // Backgrounds
 $color-bg-dark: $color-dark;
+$color-bg-cream: $color-cream;
 $color-bg-light: $color-white;
 
 // Shadow
