--- a/css/components/ui/_dashboard-item.scss
+++ b/css/components/ui/_dashboard-item.scss
@@ -35,6 +35,12 @@
     height: 100%;
     max-height: 250px;
     overflow-y: auto;
+
+    .no-data {
+      font-size: $font-size-big;
+      line-height: 24px;
+      text-transform: uppercase;
+    }
   }
 
   /* Footer */
