--- a/css/index.scss
+++ b/css/index.scss
@@ -21,6 +21,7 @@
 @import 'components/pages/about';
 @import 'components/pages/agency';
 @import 'components/pages/home';
+@import 'components/pages/widget';
 
 // - layout
 @import 'components/layout/footer';
@@ -65,6 +66,7 @@
 @import 'components/ui/dropdown';
 @import 'components/ui/card-image';
 @import 'components/ui/card-info';
+@import 'components/ui/chart';
 @import 'components/ui/collapsible-list';
 @import 'components/ui/compare-toolbar';
 @import 'components/ui/filters';
