--- a/css/components/pages/_widget.scss
+++ b/css/components/pages/_widget.scss
@@ -1,21 +1,9 @@
-@media print {
-  @page {
-    size: A4 portrait;
-    -webkit-print-color-adjust: exact;
-    color-adjust: exact;
-    margin: 2cm;
-  }
-
-  body {
-    -webkit-print-color-adjust: exact;
-    color-adjust: exact;
-  }
-}
 
 .p-widget {
   width: 210mm !important;
   margin: 0 auto;
   background-color: white;
+  padding-top: 90px;
 
   .c-dashboard-item {
     &.-print {
