--- a/css/components/ui/login-nav.scss
+++ b/css/components/ui/login-nav.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: flex-end;
   width: 100%;
-  padding: 10px 0 10px 50px;
+  padding: 10px 0 10px 0;
   margin-top: 6px;
 
   .nav-list {
@@ -14,6 +14,10 @@
     .nav-item {
       text-transform: uppercase;
       padding: 0 20px;
+
+      @media screen and (max-width: 775px) {
+        padding: 0 12px;
+      }
     }
   }
 
@@ -22,6 +26,10 @@
     align-items: center;
     padding-left: 20px;
     border-left: 1px solid $color-text-1;
+
+    @media screen and (max-width: 775px) {
+      padding-left: 12px;
+    }
 
     button {
       padding: 0;
