--- a/css/components/ui/_dashboard-item.scss
+++ b/css/components/ui/_dashboard-item.scss
@@ -96,6 +96,7 @@
       font-size: $font-size-big;
       line-height: 24px;
       text-transform: uppercase;
+      text-align: center;
     }
   }
 
