--- a/css/components/pages/_home.scss
+++ b/css/components/pages/_home.scss
@@ -30,8 +30,9 @@
 
   .dashboard {
     .image-overlapped {
-      display: flex;
-      justify-content: center;
+      display: inline-block;
+      margin-left: auto;
+      margin-right: auto;
       margin-top: -128px;
       margin-bottom: 50px;
     }
