--- a/css/components/ui/_accordion.scss
+++ b/css/components/ui/_accordion.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-flow: column;
   justify-content: flex-start;
+  padding-bottom: 80px;
 
   .accordion-section {
     &.-dynamic{
