--- a/css/components/map/_map.scss
+++ b/css/components/map/_map.scss
@@ -5,6 +5,11 @@
   height: 240px;
   transition: all $animation-time-2 $ease-out-sine;
 
+  .map-container {
+    width: 100%;
+    height: 100%;
+  }
+
   .map-leaflet {
     width: 100%;
     height: 100%;
