--- a/css/components/pages/_home.scss
+++ b/css/components/pages/_home.scss
@@ -54,7 +54,7 @@
   }
 
   .about {
-    background-image: url('/static/images/home_2.png');
+    background-image: url('/static/images/home_2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-color: $color-bg-dark;
