--- a/css/components/layout/_header.scss
+++ b/css/components/layout/_header.scss
@@ -157,7 +157,8 @@ $menu-container-width: 220px;
       margin-top: 15px;
       border-top: 1px solid rgba($color-border-3, .2);
 
-      button {
+      .btn {
+        display: inline-block;
         padding: 0;
         width: 100%;
         padding: 15px 25px;
