Format colors & xasis values

--- a/css/components/charts/_table-type.scss
+++ b/css/components/charts/_table-type.scss
@@ -46,9 +46,15 @@
       margin-left: 5px;
       margin-top: 2px;
 
-      &.-up { fill: $color-threshold-success; }
-      &.-equal { fill: $color-text-1; }
-      &.-down { fill: $color-threshold-fail; }
+      &.-up,
+      &.-equal,
+      &.-down {
+        fill: $color-text-1;
+      }
+
+      // &.-up { fill: $color-threshold-success; }
+      // &.-equal { fill: $color-text-1; }
+      // &.-down { fill: $color-threshold-fail; }
     }
   }
 }
