--- a/css/components/charts/_line-type.scss
+++ b/css/components/charts/_line-type.scss
@@ -3,6 +3,21 @@
   width: 100%;
   height: 200px;
 
+  /* Axis */
+  .recharts-cartesian-axis {
+    text tspan {
+      font-size: 11px;
+      line-height: 13px;
+      fill: $color-text-1;
+    }
+
+    &.yAxis {
+      text tspan {
+        fill: rgba($color-text-1, .5);
+      }
+    }
+  }
+
   .recharts-text.recharts-label {
     fill: $color-text-1;
   }
@@ -12,6 +27,10 @@
       stroke: $color-border-1;
       stroke-width: 1px;
     }
+  }
+
+  .c-bars-type .recharts-cartesian-axis.yAxis text tspan {
+
   }
 
   /* Legend */
