--- a/css/components/modal-contents/_login.scss
+++ b/css/components/modal-contents/_login.scss
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   padding: 135px 50px;
+  background-color: $color-bg-dark;
 
   .login-container {
     width: 360px;
