--- a/css/settings.scss
+++ b/css/settings.scss
@@ -12,6 +12,7 @@
 $color-black: black;
 $color-dark: #1E2727;
 $color-dark-grey: #2E3D3D;
+$color-blue: #6f6fc3;
 $color-light-grey: #979797;
 $color-dark-green: #73A575;
 $color-light-green: #C9FF8A;
