Bars char tooltip color

--- a/css/components/charts/_tooltip-chart.scss
+++ b/css/components/charts/_tooltip-chart.scss
@@ -15,7 +15,7 @@
   &.-medium { border-color: $color-threshold-medium; }
   &.-weak { border-color: $color-threshold-weak; }
   &.-fail { border-color: $color-threshold-fail; }
-  &.-blue { border-color: $color-blue; }
+  &.-grey { border-color: $color-dark-grey; }
 
   .title {
     font-size: $font-size-small;
