--- a/css/components/ui/_dashboard-item.scss
+++ b/css/components/ui/_dashboard-item.scss
@@ -97,7 +97,7 @@
       line-height: 24px;
       text-transform: uppercase;
       text-align: center;
-      color: rgba($color-text-1, 5);
+      color: rgba($color-text-1, .2);
     }
   }
 
