--- a/css/components/charts/_bars-type.scss
+++ b/css/components/charts/_bars-type.scss
@@ -48,3 +48,19 @@
     }
   }
 }
+
+.p-widget .c-bars-type {
+  .recharts-cartesian-axis {
+    text tspan {
+      fill: $color-text-2;
+    }
+    &.yAxis {
+      text tspan {
+        fill: rgba($color-text-2, .5);
+      }
+    }
+  }
+  .recharts-text.recharts-label {
+    fill: $color-text-2;
+  }
+}
