--- a/css/components/charts/_line-type.scss
+++ b/css/components/charts/_line-type.scss
@@ -46,3 +46,20 @@
     }
   }
 }
+
+
+.p-widget .c-line-type {
+  .recharts-cartesian-axis {
+    text tspan {
+      fill: $color-text-2;
+    }
+    &.yAxis {
+      text tspan {
+        fill: rgba($color-text-2, .5);
+      }
+    }
+  }
+  .recharts-text.recharts-label {
+    fill: $color-text-2;
+  }
+}
