--- a/css/components/charts/_extremes-type.scss
+++ b/css/components/charts/_extremes-type.scss
@@ -10,6 +10,7 @@
   .extreme-container {
     display: flex;
     flex-flow: column;
+    margin-bottom: 10px;
 
     /* Threshold color */
     &.-success {
@@ -41,6 +42,11 @@
   .value {
     font-size: 35px;
     line-height: 38px;
+
+    .format {
+      font-size: $font-size-default;
+      line-height: 19px;
+    }
   }
 
   .title {
