--- a/css/components/ui/login-nav.scss
+++ b/css/components/ui/login-nav.scss
@@ -31,10 +31,9 @@
       padding-left: 12px;
     }
 
-    button {
+    .btn {
       padding: 0;
       text-transform: uppercase;
-      color: $color-text-1;
     }
   }
 }
