Send email to reset password

--- a/css/index.scss
+++ b/css/index.scss
@@ -74,6 +74,7 @@
 @import 'components/ui/intro';
 @import 'components/ui/item-tools';
 @import 'components/ui/login-nav';
+@import 'components/ui/message';
 @import 'components/ui/modal';
 @import 'components/ui/dashboard-item';
 @import 'components/ui/dashboard-list';
