--- a/css/components/modal-contents/_login.scss
+++ b/css/components/modal-contents/_login.scss
@@ -12,8 +12,6 @@
   }
 
   .login-header {
-    margin-bottom: 60px;
-
     .title {
       font-size: $font-size-bigger;
       line-height: 29px;
@@ -21,6 +19,8 @@
   }
 
   .form-container {
+    margin-top: 60px;
+    
     .c-field {
       width: 100%;
 
