--- a/css/components/layout/_header.scss
+++ b/css/components/layout/_header.scss
@@ -3,14 +3,23 @@ $menu-container-width: 220px;
 .c-header {
   display: flex;
   justify-content: space-between;
-  padding: 0 30px;
+  padding: 0 20px;
   border-bottom: 1px solid $color-border-1;
+
+  @media #{$mq-medium} {
+    padding: 0 30px;
+  }
 
   .header-container {
     display: flex;
     flex-flow: row wrap;
     align-items: center;
     padding: 22px 0;
+
+    @media #{$mq-small-medium} {
+      justify-content: space-between;
+      align-items: center;
+    }
   }
 
   .header-title {
@@ -18,6 +27,12 @@ $menu-container-width: 220px;
     align-items: center;
     height: 100%;
     margin-right: 30px;
+
+    @media #{$mq-small-medium} {
+      margin: 0;
+
+      .btn-menu { margin-right: 0 !important; }
+    }
 
     .btn-menu {
       display: flex;
@@ -41,11 +56,47 @@ $menu-container-width: 220px;
     }
   }
 
+  .header-title-content {
+    display: flex;
+
+    * {
+      font-size: $font-size-default;
+      line-height: 19px;
+      fill: $color-text-1;
+    }
+
+    .title-link {
+      display: flex;
+      align-items: center;
+
+      .c-icon {
+        width: 11px;
+        height: 11px;
+        margin-bottom: 2px;
+        margin-right: 10px !important;
+      }
+    }
+  }
+
   .header-content {
     display: flex;
     align-items: center;
     flex-grow: 1;
     height: 100%;
+
+
+    @media #{$mq-small-medium} {
+      justify-content: flex-end;
+      flex-grow: 0;
+
+      * {
+        fill: $color-text-1;
+      }
+
+      .btn {
+        cursor: pointer;
+      }
+    }
   }
 
   /* Toggle Menu */
