--- a/css/components/modal-contents/_indicators-list.scss
+++ b/css/components/modal-contents/_indicators-list.scss
@@ -4,7 +4,7 @@
   padding: 30px 0;
   width: 100%;
 
-  @media #{$mq-medium} {
+  @media #{$mq-small} {
     padding: 42px 48px 26px;
     width: 80vw;
   }
@@ -15,7 +15,7 @@
     margin-bottom: 25px;
     border-bottom: 1px solid $color-border-1;
 
-    @media #{$mq-medium} {
+    @media #{$mq-small} {
       margin-bottom: 30px;
       border: 0;
     }
@@ -23,7 +23,7 @@
     .title {
       text-align: left;
 
-      @media #{$mq-medium} {
+      @media #{$mq-small} {
         text-align: center;
       }
     }
@@ -39,7 +39,7 @@
       flex-flow: column;
       margin-bottom: 25px;
 
-      @media #{$mq-medium} {
+      @media #{$mq-small} {
         display: inline-block;
         -webkit-column-count: 3;
         -webkit-column-gap: 10px;
@@ -60,7 +60,7 @@
 
       .collapsible-list-container { padding-left: 15px; }
 
-      @media #{$mq-medium} {
+      @media #{$mq-small} {
         width: 100%;
         margin-bottom: 15px;
         -webkit-column-break-inside: avoid;
@@ -89,7 +89,7 @@
       width: 100%;
     }
 
-    @media #{$mq-medium} {
+    @media #{$mq-small} {
       position: relative;
       left: auto;
       bottom: auto;
