--- a/css/settings.scss
+++ b/css/settings.scss
@@ -109,8 +109,10 @@ $bp-tablet: 1024px;
 $bp-medium: 40em;
 
 // Medias
-$mq-medium: 'screen and (min-width: 300px) and (max-width: #{$bp-mobile})';
+$mq-mobile: 'screen and (min-width: 300px) and (max-width: #{$bp-mobile})';
 $mq-small-medium: 'screen and (min-width: 300px) and (max-width: #{$bp-tablet})';
+$mq-smaller: 'screen and (min-width: #{$bp-mobile})';
+$mq-small: 'screen and (min-width: #{$bp-tablet})';
 $mq-medium: 'screen and (min-width: #{$bp-medium})';
 
 /**
