Set area toolbar as component

--- a/css/index.scss
+++ b/css/index.scss
@@ -59,6 +59,8 @@
 @import '../node_modules/react-select/dist/react-select';
 @import '../node_modules/react-toggle-switch/dist/css/switch.min';
 @import '../node_modules/react-bootstrap-daterangepicker/css/daterangepicker';
+@import '../node_modules/slick-carousel/slick/slick.css';
+@import '../node_modules/slick-carousel/slick/slick-theme.css';
 @import 'components/ui/accordion';
 @import 'components/ui/area-indicators';
 @import 'components/ui/button';
