--- a/css/components/ui/_area-indicators.scss
+++ b/css/components/ui/_area-indicators.scss
@@ -16,6 +16,10 @@
     .tools {
       display: flex;
 
+      > div {
+        display: flex;
+      }
+
       .btn {
         display: flex;
         align-items: center;
