Remove widget confirmation modal

--- a/css/components/ui/_item-tools.scss
+++ b/css/components/ui/_item-tools.scss
@@ -30,6 +30,14 @@
         margin-right: 0;
       }
 
+      &:hover {
+        border: 1px solid rgba($color-text-1, .35);
+
+        .c-icon {
+          fill: rgba($color-text-1, .35);
+        }
+      }
+
       .c-icon {
         fill: rgba($color-text-1, .5);
       }
