--- a/css/index.scss
+++ b/css/index.scss
@@ -85,6 +85,7 @@
 @import 'components/ui/section';
 @import 'components/ui/select';
 @import 'components/ui/select-custom';
+@import 'components/ui/select-accordion';
 @import 'components/ui/select-list';
 @import 'components/ui/select-slider';
 @import 'components/ui/sidebar';
