--- a/css/index.scss
+++ b/css/index.scss
@@ -59,8 +59,8 @@
 @import '../node_modules/react-select/dist/react-select';
 @import '../node_modules/react-toggle-switch/dist/css/switch.min';
 @import '../node_modules/react-bootstrap-daterangepicker/css/daterangepicker';
-@import '../node_modules/slick-carousel/slick/slick';
-@import '../node_modules/slick-carousel/slick/slick-theme';
+@import '../node_modules/slick-carousel/slick/slick.scss';
+@import '../node_modules/slick-carousel/slick/slick-theme.scss';
 
 @import 'components/ui/accordion';
 @import 'components/ui/area-indicators';
