Update or add new location

--- a/css/components/ui/_select-accordion.scss
+++ b/css/components/ui/_select-accordion.scss
@@ -1,10 +1,11 @@
 
 .c-select-accordion {
   color: $color-text-1;
+  margin-bottom: 30px;
 
   &.-active {
     .accordion-content-container {
-      max-height: 300px;
+      max-height: inherit;
       transition: all .3s ease;
 
       .accordion-content {
@@ -23,7 +24,9 @@
       align-items: center;
 
       .title {
-        color: $color-text-1;
+        font-size: 16px;
+        line-height: 16px;
+        color: rgba($color-text-1, .5);
       }
 
       .c-icon {
@@ -37,16 +40,16 @@
       align-items: center;
 
       .c-icon {
-        fill: $color-text-1;
+        fill: rgba($color-text-1, .5);
       }
     }
   }
 
-
   // Content
   .accordion-content-container {
-    overflow: hidden;
+    padding: 0 12px;
     max-height: 0;
+    overflow: hidden;
     transition: all .3s ease;
 
     .accordion-content {
@@ -55,11 +58,21 @@
       transition: all .3s ease;
     }
 
-    .item {
+    .content-item {
+      margin-top: 20px;
+
       .item-header {
+        color: $color-text-1;
+
         button {
           display: flex;
           align-items: center;
+
+          .title {
+            color: $color-text-1;
+            font-size:$font-size-default;
+            line-height: 16px;
+          }
 
           .c-icon {
             margin-left: 10px;
@@ -69,5 +82,4 @@
       }
     }
   }
-
 }
