Modal header styles

--- a/css/index.scss
+++ b/css/index.scss
@@ -38,6 +38,7 @@
 
 // - modal contents
 @import 'components/modal-contents/indicator-info';
+@import 'components/modal-contents/add-area';
 @import 'components/modal-contents/indicators-list';
 @import 'components/modal-contents/login';
 
@@ -64,6 +65,7 @@
 @import 'components/ui/accordion';
 @import 'components/ui/area-indicators';
 @import 'components/ui/area-toolbar';
+@import 'components/ui/badge';
 @import 'components/ui/button';
 @import 'components/ui/dropdown';
 @import 'components/ui/card-image';
