--- a/css/components/ui/_tooltip.scss
+++ b/css/components/ui/_tooltip.scss
@@ -1,258 +1,17 @@
-$tooltip-prefix-cls: 'rc-tooltip';
+.c-tooltip {
+  padding: 8px;
+  background-color: $color-secondary;
+  color: $color-text-1;
+  pointer-events: none;
 
-//
-// Tooltips
-// --------------------------------------------------
-$font-size-base     : 12px;
-$line-height-base   : 1.5;
-$border-radius-base : 0;
-$overlay-shadow     : 0 0 4px rgba(0, 0, 0, 0.17);
-//** Tooltip text color
-$tooltip-color: $color-white;
-//** Tooltip background color
-$tooltip-bg: $color-secondary;
-$tooltip-opacity: 1;
-
-$tooltip-border-width: 1px;
-$tooltip-border-color: $color-secondary;
-$tooltip-shadow-width: 1px;
-
-//** Tooltip arrow width
-$tooltip-arrow-width: 6px;
-//** Tooltip distance with trigger
-//** Tooltip arrow color
-$tooltip-arrow-color: $tooltip-border-color;
-$tooltip-arrow-inner-color: $tooltip-bg;
-
-// Base class
-.#{$tooltip-prefix-cls} {
-  position: absolute;
-  z-index: 1070;
-  display: block;
-  visibility: visible;
-  line-height: $line-height-base;
-  font-size: $font-size-base;
-  background-color:rgba(0, 0, 0, 0.05);
-  padding: $tooltip-shadow-width;
-  opacity: $tooltip-opacity;
-
-  &-hidden {
-    display: none;
+  &:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    border: 4px solid transparent;
+    border-left: 4px solid $color-secondary;
+    border-top: 4px solid $color-secondary;
+    z-index: 3;
   }
 }
-
-// Wrapper for the tooltip content
-.#{$tooltip-prefix-cls}-inner {
-  padding: 8px 10px;
-  color: $tooltip-color;
-  text-align: left;
-  text-decoration: none;
-  background-color: $tooltip-bg;
-  border-radius: $border-radius-base;
-  min-height: 34px;
-  border:$tooltip-border-width solid $tooltip-border-color;
-}
-
-// Arrows
-.#{$tooltip-prefix-cls}-arrow,
-.#{$tooltip-prefix-cls}-arrow-inner{
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-color: transparent;
-  border-style: solid;
-}
-
-.#{$tooltip-prefix-cls} {
-  &-placement-top &-arrow,
-  &-placement-topLeft &-arrow,
-  &-placement-topRight &-arrow{
-    bottom: -$tooltip-arrow-width + $tooltip-shadow-width;
-    margin-left: -$tooltip-arrow-width;
-    border-width: $tooltip-arrow-width $tooltip-arrow-width 0;
-    border-top-color: $tooltip-arrow-color;
-  }
-
-  &-placement-top &-arrow-inner,
-  &-placement-topLeft &-arrow-inner,
-  &-placement-topRight &-arrow-inner{
-    bottom: $tooltip-border-width;
-    margin-left: -$tooltip-arrow-width;
-    border-width: $tooltip-arrow-width $tooltip-arrow-width 0;
-    border-top-color: $tooltip-arrow-inner-color;
-  }
-
-  &-placement-top &-arrow {
-    left: 50%;
-  }
-
-  &-placement-topLeft &-arrow {
-    left: 15%;
-  }
-
-  &-placement-topRight &-arrow {
-    right: 15%;
-  }
-
-  &-placement-right &-arrow,
-  &-placement-rightTop &-arrow,
-  &-placement-rightBottom &-arrow {
-    left: -$tooltip-arrow-width + $tooltip-shadow-width;
-    margin-top: -$tooltip-arrow-width;
-    border-width: $tooltip-arrow-width $tooltip-arrow-width $tooltip-arrow-width 0;
-    border-right-color: $tooltip-arrow-color;
-  }
-
-  &-placement-right &-arrow-inner,
-  &-placement-rightTop &-arrow-inner,
-  &-placement-rightBottom &-arrow-inner {
-    left: $tooltip-border-width;
-    margin-top: -$tooltip-arrow-width;
-    border-width: $tooltip-arrow-width $tooltip-arrow-width $tooltip-arrow-width 0;
-    border-right-color: $tooltip-arrow-inner-color;
-  }
-
-  &-placement-right &-arrow {
-    top: 50%;
-  }
-
-  &-placement-rightTop &-arrow {
-    top: 15%;
-    margin-top: 0;
-  }
-
-  &-placement-rightBottom &-arrow {
-    bottom: 15%;
-  }
-
-  &-placement-left &-arrow,
-  &-placement-leftTop &-arrow,
-  &-placement-leftBottom &-arrow {
-    right: -$tooltip-arrow-width + $tooltip-shadow-width;
-    margin-top: -$tooltip-arrow-width;
-    border-width: $tooltip-arrow-width 0 $tooltip-arrow-width $tooltip-arrow-width;
-    border-left-color: $tooltip-arrow-color;
-  }
-
-  &-placement-left &-arrow-inner,
-  &-placement-leftTop &-arrow-inner,
-  &-placement-leftBottom &-arrow-inner {
-    right: $tooltip-border-width;
-    margin-top: -$tooltip-arrow-width;
-    border-width: $tooltip-arrow-width 0 $tooltip-arrow-width $tooltip-arrow-width;
-    border-left-color: $tooltip-arrow-inner-color;
-  }
-
-  &-placement-left &-arrow {
-    top: 50%;
-  }
-
-  &-placement-leftTop &-arrow {
-    top: 15%;
-    margin-top: 0;
-  }
-
-  &-placement-leftBottom &-arrow {
-    bottom: 15%;
-  }
-
-  &-placement-bottom &-arrow,
-  &-placement-bottomLeft &-arrow,
-  &-placement-bottomRight &-arrow {
-    top: -$tooltip-arrow-width + $tooltip-shadow-width;;
-    margin-left: -$tooltip-arrow-width;
-    border-width: 0 $tooltip-arrow-width $tooltip-arrow-width;
-    border-bottom-color: $tooltip-arrow-color;
-  }
-
-  &-placement-bottom &-arrow-inner,
-  &-placement-bottomLeft &-arrow-inner,
-  &-placement-bottomRight &-arrow-inner {
-    top: $tooltip-border-width;
-    margin-left: -$tooltip-arrow-width;
-    border-width: 0 $tooltip-arrow-width $tooltip-arrow-width;
-    border-bottom-color: $tooltip-arrow-inner-color;
-  }
-
-  &-placement-bottom &-arrow {
-    left: 50%;
-  }
-
-  &-placement-bottomLeft &-arrow {
-    left: 15%;
-  }
-
-  &-placement-bottomRight &-arrow {
-    right: 15%;
-  }
-}
-
-.#{$tooltip-prefix-cls} {
-  &-zoom-enter, &-zoom-leave {
-    display: block;
-  }
-
-  &-zoom-enter, &-zoom-appear {
-    opacity: 0;
-    animation-duration: 0.3s;
-    animation-fill-mode: both;
-    animation-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
-    animation-play-state: paused;
-  }
-
-  &-zoom-leave {
-    animation-duration: 0.3s;
-    animation-fill-mode: both;
-    animation-timing-function: cubic-bezier(0.6, -0.3, 0.74, 0.05);
-    animation-play-state: paused;
-  }
-
-  &-zoom-enter-zoom-enter-active, &-zoom-appear-zoom-appear-active {
-    animation-name: rcToolTipZoomIn;
-    animation-play-state: running;
-  }
-
-  &-zoom-leave-zoom-leave-active {
-    animation-name: rcToolTipZoomOut;
-    animation-play-state: running;
-  }
-
-  @keyframes rcToolTipZoomIn {
-    0% {
-      opacity: 0;
-      transform-origin: 50% 50%;
-      transform: scale(0, 0);
-    }
-    100% {
-      opacity: 1;
-      transform-origin: 50% 50%;
-      transform: scale(1, 1);
-    }
-  }
-  @keyframes rcToolTipZoomOut {
-    0% {
-      opacity: 1;
-      transform-origin: 50% 50%;
-      transform: scale(1, 1);
-    }
-    100% {
-      opacity: 0;
-      transform-origin: 50% 50%;
-      transform: scale(0, 0);
-    }
-  }
-}
-
-// .c-tooltip {
-//
-//
-//   .rc-tooltip-arrow {
-//     border-color: $color-secondary;
-//   }
-//
-//   .rc-tooltip-inner {
-//     background: $color-secondary;
-//     border-color: $color-secondary;
-//     color: $color-white;
-//   }
-// }
