--- a/css/components/ui/_item-tools.scss
+++ b/css/components/ui/_item-tools.scss
@@ -15,6 +15,13 @@
   .other-tools {
     display: flex;
 
+    > * {
+      margin-right: 7px;
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+
     .btn {
       display: flex;
       align-items: center;
@@ -22,13 +29,9 @@
       width: 25px;
       height: 25px;
       padding: 0;
-      margin-right: 7px;
+
       border: 1px solid rgba($color-text-1, .5);
       border-radius: 50%;
-
-      &:last-child {
-        margin-right: 0;
-      }
 
       &:hover {
         border: 1px solid rgba($color-text-1, .35);
