--- a/css/components/ui/_modal.scss
+++ b/css/components/ui/_modal.scss
@@ -30,6 +30,7 @@
     height: 100%;
     background: $color-bg-dark;
     box-shadow: 0 1px 1px rgba($color-black, 0.15);
+    max-width: calc(100% - 50px);
     z-index: 1;
     transition: transform $animation-time-2 $ease-out-cubic;
     transform: translateY(0);
@@ -38,7 +39,7 @@
     @media #{$mq-small} {
       width: auto;
       min-width: 60%;
-      max-width: calc(100% - 50px);
+      max-width: 600px;
       height: auto;
     }
   }
@@ -64,7 +65,8 @@
     background: none;
     border: none;
     outline: none;
-    display: block;
+    display: flex;
+    justify-content: center;
     position: absolute;
     top: 30px;
     right: 15px;
@@ -86,7 +88,7 @@
     z-index: 2; /* Otherwise, it won't be reachable */
 
     &:hover {
-      fill: $color-primary;
+      fill: $color-error;
     }
   }
 
