--- a/css/components/ui/_area-toolbar.scss
+++ b/css/components/ui/_area-toolbar.scss
@@ -15,10 +15,24 @@
 
   .location-select-container {
     @media #{$mq-small-medium} {
+      .btn-area {
+        display: flex;
+        align-items: center;
+      }
+
       h1 {
         font-size: $font-size-default;
         line-height: 16px;
         color: rgba($color-text-1, .5);
+        padding: 0;
+      }
+
+      .c-icon {
+        fill: $color-primary;
+        stroke: $color-primary;
+        stroke-width: 4px;
+        margin-top: 2px;
+        margin-left: 8px;
       }
     }
   }
