--- a/css/components/ui/_filters-selected-bar.scss
+++ b/css/components/ui/_filters-selected-bar.scss
@@ -6,6 +6,7 @@
   font-size: $font-size-small;
   line-height: 16px;
   border: 1px solid $color-border-1;
+  border-bottom: none;
   border-top: 0;
 
   .bar-label {
