--- a/css/components/ui/_select-accordion.scss
+++ b/css/components/ui/_select-accordion.scss
@@ -22,6 +22,7 @@
     .title-container {
       display: flex;
       align-items: center;
+      padding: 0;
 
       .title {
         font-size: 16px;
