--- a/css/index.scss
+++ b/css/index.scss
@@ -40,6 +40,7 @@
 @import 'components/modal-contents/indicator-info';
 @import 'components/modal-contents/add-area';
 @import 'components/modal-contents/indicators-list';
+@import 'components/modal-contents/filters-modal';
 @import 'components/modal-contents/login';
 
 // - form
