--- a/css/components/modal-contents/_filters-modal.scss
+++ b/css/components/modal-contents/_filters-modal.scss
@@ -43,18 +43,21 @@
     flex-flow: column;
     padding: 0 20px;
 
-    .layout-type {
-      display: flex;
-      align-items: center;
+    .label {
       font-size: $font-size-small;
       line-height: 16px;
       color: rgba($color-text-1, .5);
+      margin-right: 24px;
+    }
+
+    .layout-type {
+      display: flex;
+      align-items: center;
       margin-bottom: 23px;
 
       .layout-label {
         display: inline-block;
         margin-bottom: 5px;
-        margin-right: 24px;
       }
 
       .btn {
@@ -74,6 +77,31 @@
         .c-icon {
           fill: $color-secondary;
         }
+      }
+    }
+
+    .selected-filters-container {
+      display: flex;
+      align-items: center;
+      margin-bottom: 29px;
+
+      .selected-filters {
+        display: flex;
+        align-items: center;
+        margin-right: 10px;
+
+        .c-badge {
+          margin-left: 5px;
+          margin-top: 0;
+        }
+      }
+
+      .selected-title {
+        font-size: $font-size-small;
+        line-height: 16px;
+        color: $color-text-1;
+        padding: 0;
+        font-weight: $font-weight-default;
       }
     }
 
