--- a/css/components/ui/_select-accordion.scss
+++ b/css/components/ui/_select-accordion.scss
@@ -27,6 +27,7 @@
       .title {
         font-size: 16px;
         line-height: 16px;
+        font-weight: $font-weight-default;
         color: rgba($color-text-1, .5);
       }
 
