--- a/css/components/layout/_header.scss
+++ b/css/components/layout/_header.scss
@@ -91,7 +91,7 @@ $menu-container-width: 220px;
       flex-grow: 0;
 
       * {
-        fill: $color-text-1;
+        fill: $color-primary;
       }
 
       .btn {
