--- a/css/components/ui/_filters-selected-bar.scss
+++ b/css/components/ui/_filters-selected-bar.scss
@@ -9,6 +9,40 @@
   border-bottom: none;
   border-top: 0;
 
+  @media #{$mq-small-medium} {
+    .label {
+      font-size: $font-size-small;
+      line-height: 16px;
+      color: rgba($color-text-1, .5);
+      margin-right: 10px;
+    }
+
+    .selected-filters-container {
+      display: flex;
+      align-items: center;
+
+      .selected-filters {
+        display: flex;
+        align-items: center;
+        margin-right: 10px;
+
+        .c-badge {
+          margin-left: 5px;
+          margin-top: 0;
+        }
+      }
+
+      .selected-title {
+        font-size: $font-size-small;
+        line-height: 16px;
+        color: $color-text-1;
+        padding: 0;
+        font-weight: $font-weight-default;
+      }
+    }
+  }
+
+
   .bar-label {
     display: inline-block;
     margin-right: 20px;
