--- a/css/components/modal-contents/_filters-modal.scss
+++ b/css/components/modal-contents/_filters-modal.scss
@@ -48,6 +48,7 @@
       line-height: 16px;
       color: rgba($color-text-1, .5);
       margin-right: 24px;
+      white-space: nowrap;
     }
 
     .layout-type {
