--- a/css/components/ui/_dropdown.scss
+++ b/css/components/ui/_dropdown.scss
@@ -1,5 +1,6 @@
 
 .c-dropdown {
+  position: relative;
   padding: 10px;
   background-color: $color-white;
   color: $color-text-2;
@@ -18,8 +19,27 @@
     }
   }
 
+  .dropdown-faded {
+    position: relative;
+
+    &:after {
+      content: '';
+      position: absolute;
+      bottom: -5px;
+      width: 100%;
+      height: 20px;
+
+      /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&1+0,0+100;White+to+Transparent */
+      background: -moz-linear-gradient(to top, rgba($color-bg-light, .8) 0%, rgba($color-bg-light, 0) 100%); /* FF3.6-15 */
+      background: -webkit-linear-gradient(to top, rgba($color-bg-light, .8) 0%,rgba($color-bg-light, 0) 100%); /* Chrome10-25,Safari5.1-6 */
+      background: linear-gradient(to top, rgba($color-bg-light, .8) 0%,rgba($color-bg-light, 0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
+    }
+  }
+
+
   .dropdown-container {
     overflow: auto;
-    max-height: 150px;
+    max-height: 165px;
   }
 }
