--- a/css/index.scss
+++ b/css/index.scss
@@ -21,6 +21,7 @@
 // - pages
 @import 'components/pages/about';
 @import 'components/pages/agency';
+@import 'components/pages/compare';
 @import 'components/pages/home';
 @import 'components/pages/widget';
 
