Add logos in home page

--- a/css/components/pages/_home.scss
+++ b/css/components/pages/_home.scss
@@ -73,4 +73,34 @@
     }
   }
 
+  .agencies {
+    .principal-agency {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+
+      .agency-name {
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+        justify-content: center;
+        margin-left: 20px;
+      }
+    }
+
+    .agency {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      margin: 10px 0;
+      color: $color-text-2;
+      cursor: pointer;
+    }
+
+    .image-container {
+      max-width: 100px;
+      // max-height: 50px;
+    }
+  }
 }
